--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,10 +6,10 @@
     <div class="trigger">
       <div class="trigger-child">
         <span class="nav-link"><a href="/about/">about</a></span>
-        <span class="nav-link"><a href="/about/">syllabus</a></span>
-        <span class="nav-link"><a href="/about/">assignments</a></span>
+        <span class="nav-link"><a href="/syllabus/">syllabus</a></span>
+        <span class="nav-link"><a href="/assignments/">assignments</a></span>
         <span class="nav-link"><a href="/2020/">lectures</a></span>
-        <span class="nav-link"><a href="/about/">faq</a></span>
+        <span class="nav-link"><a href="/FAQs/">faq</a></span>
       </div>
     </div>
   </nav>
