--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,10 +5,10 @@
     <label class="menu-label" for="menu-icon"></label>
     <div class="trigger">
       <div class="trigger-child">
-        <span class="nav-link"><a href="/syllabus/">syllabus</a></span>
-        <span class="nav-link"><a href="/assignments/">assignments</a></span>
-        <span class="nav-link"><a href="/2020/">lectures</a></span>
-        <span class="nav-link"><a href="/FAQs/">faq</a></span>
+        <span class="nav-link"><a href="/LIS-570-Au2020//syllabus/">syllabus</a></span>
+        <span class="nav-link"><a href="/LIS-570-Au2020//assignments/">assignments</a></span>
+        <span class="nav-link"><a href="/LIS-570-Au2020//2020/">lectures</a></span>
+        <span class="nav-link"><a href="/LIS-570-Au2020//FAQs/">faq</a></span>
       </div>
     </div>
   </nav>
