--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <div id="nav-bg">
   <nav id="top-nav">
-    <a href="LIS-570-Au2020/" id="logo">LIS 570</a>
+    <a href="" id="logo">LIS 570</a>
     <input type="checkbox" id="menu-icon">
     <label class="menu-label" for="menu-icon"></label>
     <div class="trigger">
